--- a/src/components/panel/index.html
+++ b/src/components/panel/index.html
@@ -39,7 +39,9 @@
       <footer id="footer">
         <h1 id="name"></h1>
         <p id="desc"></p>
-        <a href="" class="btn" target="_blank">Connect</a>
+        <!-- Temporarily hiding it  -->
+        <!-- https://dev.twitch.tv/docs/extensions/submission-best-practices/#extensions-and-offsite-links -->
+        <!-- <a href="" class="btn" target="_blank">Connect</a> -->
       </footer>
     </div>
     <noscript>
