--- a/src/components/config/style.css
+++ b/src/components/config/style.css
@@ -50,10 +50,6 @@ button {
   margin-top: 20px;
 }
 
-#logo-url {
-  color: var(--color-blue);
-}
-
 footer {
   display: flex;
   align-items: center;
@@ -65,6 +61,10 @@ footer {
 a {
   text-decoration: none;
   color: var(--color-gray);
+}
+
+.text-blue {
+  color: var(--color-blue);
 }
 
 .link-profile {
