--- a/src/components/panel/style.css
+++ b/src/components/panel/style.css
@@ -52,9 +52,9 @@ p {
   display: -webkit-box;
   overflow: hidden;
   text-overflow: ellipsis;
-  -webkit-line-clamp: 2;
+  -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
-  margin-top: 0;
+  margin: 0;
 
   font-size: 13px;
   color: var(--color-gray);
